added external title bar and sliders

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1,9 +1,4 @@
-#mainpage 
-{
-	/*display: none;*/
-}
-
-#loadingpage
-{
-	/*display: block;*/
+#login-with-facebook {
+	background-color: blue;
+	color: white;
 }
