--- a/www/css/judas.css
+++ b/www/css/judas.css
@@ -28,7 +28,7 @@ button,
 }
 @font-face {
     font-family: "Title";
-    src: url('fonts/CaviarDreams.ttf') format("truetype");
+    src: url('fonts/Vera.ttf') format("truetype");
 }
 legend,
 .ui-input-text input,
