--- a/www/css/index.css
+++ b/www/css/index.css
@@ -3,6 +3,33 @@
 	color: white;
 }
 
+.infoButton{	
+	position:fixed;
+	z-index:10;
+	height:50px;
+	width:50px;
+	
+	
+}
+
+#rabbitInfo{
+	top:10%;
+	left:3%;
+	
+}
+#possumInfo{
+	top:10%;
+	left:52%;
+}
+#stoatInfo{
+	top:52%;
+	left:3%;
+}
+#otherInfo{
+	top:52%;
+	left:52%;
+}
+
 .img-carousel {
 	height: 100px;
 	padding:2px;
@@ -15,10 +42,14 @@
    	background-color:black;
 }
 
-.ui-page {
-      background:url(images/NZbg1.png) ;
-      background-size: cover;          
- }  
+
+
+#popupDialog{
+	width:100%;
+	height:40%;
+	top:100px;
+	
+}
  .photopopup {
     background: transparent;
  }
