--- a/www/css/index.css
+++ b/www/css/index.css
@@ -42,12 +42,22 @@
    	background-color:black;
 }
 
+#confirmReport{
+	position:fixed;
+	top:25%;
+	width:100%;
+	height:50%;
+	background: transparent;
+}
 
 
 #popupDialog{
-	width:100%;
+	left:-30px;
+	width:110%;
 	height:40%;
 	top:100px;
+	background: transparent;
+
 	
 }
  .photopopup {
@@ -88,4 +98,16 @@
  	width: 50%;
  	top:50%;
  	left: 50%;
+ }
+ 
+ #cancel{
+	 position:fixed;
+	 top:55%;
+	 left:5%;
+ }
+ 
+ #report{
+	 position:fixed;
+	 top:55%;
+	 left:65%;
  }
