--- a/www/css/index.css
+++ b/www/css/index.css
@@ -12,10 +12,21 @@
 	
 }
 
+#logoutButt{
+	position:fixed;
+	top:1.5%;
+	left:90%;
+	width: 25px;
+	height: 25px;
+
+}
+
 #infoButt{
 	position:fixed;
-	top:0.5%;
+	top:1%;
 	left:2.5%;
+	width: 30px;
+	height: 30px;
 }
 
 #rabbitInfo{
@@ -34,6 +45,31 @@
 #otherInfo{
 	top:52%;
 	left:52%;
+}
+
+#posInfoPage{
+	position: fixed;
+	top: 35px;
+	left: 0px;
+	width: 100%;
+	height: 100%;
+}
+
+#reportBut{
+	position: fixed;
+	z-index: 10;
+	top: 87%;
+	left: 83%;
+	height: 55px;
+	width: 55px;
+}
+#reportButStoat{
+	position: fixed;
+	z-index: 10;
+	top: 87%;
+	left: 36%;
+	height: 55px;
+	width: 55px;
 }
 
 .img-carousel {
