--- a/www/css/index.css
+++ b/www/css/index.css
@@ -63,7 +63,7 @@
 	height: 55px;
 	width: 55px;
 }
-#reportButStoat{
+.reportButStoat{
 	position: fixed;
 	z-index: 10;
 	top: 87%;
@@ -71,7 +71,7 @@
 	height: 55px;
 	width: 55px;
 }
-#reportButCat{
+.reportButCat{
 	position: fixed;
 	z-index: 10;
 	top: 87%;
@@ -79,7 +79,7 @@
 	height: 55px;
 	width: 55px;
 }
-#reportButPos{
+.reportButPos{
 	position: fixed;
 	z-index: 10;
 	top: 37%;
@@ -87,25 +87,13 @@
 	height: 55px;
 	width: 55px;
 }
-#reportButRat{
+.reportButRat{
 	position: fixed;
 	z-index: 10;
 	top: 37%;
 	left: 36%;
 	height: 55px;
 	width: 55px;
-}
-
-.img-carousel {
-	height: 100px;
-	padding:2px;
-   	background-color:black;
-}
-.img-carousel {
-	height: 100px;
-	left: 50%;
-	padding:2px;
-   	background-color:black;
 }
 
 #confirmReport{
@@ -117,7 +105,7 @@
 }
 
 
-#popupDialog{
+.popupDialog{
 	left:-30px;
 	width:110%;
 	height:40%;
