--- a/www/css/index.css
+++ b/www/css/index.css
@@ -12,6 +12,10 @@
 	
 }
 
+#pestpage{
+	background-color: black;
+}
+
 #logoutButt{
 	position:fixed;
 	top:1.5%;
@@ -28,8 +32,17 @@
 	width: 30px;
 	height: 30px;
 }
+.click{
+	z-index: 10;
+	position: fixed;
+	top: 1px;
+	left: 105px;
+	width: 100px;
+	height: 40px;
+	
+}
 
-#rabbitInfo{
+#ratInfo{
 	top:10%;
 	left:3%;
 	
@@ -42,9 +55,32 @@
 	top:52%;
 	left:3%;
 }
-#otherInfo{
+#catInfo{
 	top:52%;
 	left:52%;
+}
+
+.pestPic{
+	position: absolute;
+	
+	width: 40%;
+	height: 30%;
+}
+#cat{
+	padding-left: 10px;
+}
+#poss{
+	padding-left: 150px; 
+}
+
+#ratt{
+padding-left: 10px;
+padding-top: 150px;
+}
+
+#stoatt{
+	padding-left: 150px;
+	padding-top: 150px;
 }
 
 .InfoPage{
@@ -53,6 +89,14 @@
 	left: 0px;
 	width: 100%;
 	height: 100%;
+}
+
+.InfoPestPage{
+	position: static;
+	top: 35px;
+	left: 0px;
+	width: 100%;
+	height: 40%;
 }
 
 #reportBut{
@@ -67,7 +111,7 @@
 	position: fixed;
 	z-index: 10;
 	top: 87%;
-	left: 36%;
+	left: 30%;
 	height: 55px;
 	width: 55px;
 }
@@ -75,7 +119,7 @@
 	position: fixed;
 	z-index: 10;
 	top: 87%;
-	left: 85%;
+	left: 80%;
 	height: 55px;
 	width: 55px;
 }
@@ -83,7 +127,7 @@
 	position: fixed;
 	z-index: 10;
 	top: 37%;
-	left: 85%;
+	left: 80%;
 	height: 55px;
 	width: 55px;
 }
@@ -91,7 +135,7 @@
 	position: fixed;
 	z-index: 10;
 	top: 37%;
-	left: 36%;
+	left: 30%;
 	height: 55px;
 	width: 55px;
 }
@@ -117,8 +161,8 @@
  .photopopup {
     background: transparent;
  }
- #rabbit{
-  background:url(images/Rabbit.png) ;
+ #rat{
+  background:url(images/Rat.jpg) ;
   background-size: 100% 100%;
  	position: fixed;
  	height: 50%;
@@ -127,7 +171,7 @@
  	left: 0%;
  }
   #possum{
-    background:url(images/Possum.png) ;
+    background:url(images/Possum.jpg) ;
     background-size: 100% 100%;
    	position: fixed;
    	height: 50%;
@@ -136,7 +180,7 @@
    	left: 50%;
  }
  #stoat{
-  background:url(images/Stoat.png) ;
+  background:url(images/Stoat.jpg) ;
   background-size: 100% 100%;
  	position: fixed;
  	height: 50%;
@@ -145,7 +189,7 @@
  	left: 0%;
  }
  #other{
-  background:url(images/Cat.png) ;
+  background:url(images/Cat.jpg) ;
   background-size: 100% 100%;
  	position: fixed;
  	height: 50%;
