Setting the LogIn Page background and text
its all one image and its appeared :) yay
only problem now is trying to get it to sit right. its not reacting to
any changes i make, weird

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -25,6 +25,17 @@
 
 }
 
+
+.LogInPageVisuals{
+	position: static;
+	top: -300px;
+	left: 0px;
+	width: 100%;
+	height: 40%;
+}
+
+
+
 #infoButt{
 	position:fixed;
 	top:1%;
