--- a/www/css/index.css
+++ b/www/css/index.css
@@ -8,8 +8,6 @@
 	z-index:10;
 	height:30px;
 	width:30px;
-	
-	
 }
 
 #pestpage{
@@ -26,12 +24,13 @@
 }
 
 
-.LogInPageVisuals{
-	position: static;
-	top: -300px;
-	left: 0px;
-	width: 100%;
-	height: 40%;
+#LogInPageVisuals{
+	position: fixed;
+	top: 20px;
+	left: -25px;
+	width: 105%;
+	height: 235%;
+
 }
 
 
