--- a/www/css/index.css
+++ b/www/css/index.css
@@ -14,6 +14,15 @@
 	background-color: black;
 }
 
+#popupFBicon {
+	position: fixed;
+	top: 80%;
+	left:0%;
+	width: 100%;
+	height: 15%;
+	z-index: 51;
+}
+
 
 #LogInPageFacebookButton {
 	position: fixed;
