--- a/www/css/index.css
+++ b/www/css/index.css
@@ -16,7 +16,7 @@
 
 #popupFBicon {
 	position: fixed;
-	top: 80%;
+	top: 85%;
 	left:0%;
 	width: 100%;
 	height: 15%;
@@ -191,6 +191,7 @@ padding-top: 150px;
 }
  .photopopup {
     background: transparent;
+    box-shadow: none
  }
  #rat{
   background:url(images/Rat.jpg) ;
